--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ requires-python = ">=3.8"
 
 dependencies = [
     "hdx-python-api>= 6.2.5",
+    "hdx-python-country>= 3.7.0",
 ]
 dynamic = ["version"]
 
