--- a/requirements.txt
+++ b/requirements.txt
@@ -47,14 +47,16 @@ email-validator==2.1.1
     # via hdx-python-api
 et-xmlfile==1.1.0
     # via openpyxl
-filelock==3.13.1
+filelock==3.13.3
     # via virtualenv
 frictionless==5.16.1
     # via hdx-python-utilities
-hdx-python-api==6.2.5
+hdx-python-api==6.2.6
     # via hapi-pipeline-hno (pyproject.toml)
-hdx-python-country==3.6.9
-    # via hdx-python-api
+hdx-python-country==3.7.0
+    # via
+    #   hapi-pipeline-hno (pyproject.toml)
+    #   hdx-python-api
 hdx-python-utilities==3.6.7
     # via
     #   hdx-python-api
@@ -123,7 +125,7 @@ ply==3.11
     #   libhxl
 pockets==0.9.1
     # via sphinxcontrib-napoleon
-pre-commit==3.6.2
+pre-commit==3.7.0
     # via hapi-pipeline-hno (pyproject.toml)
 pyasn1==0.5.1
     # via
@@ -151,7 +153,7 @@ pytest==8.1.1
     # via
     #   hapi-pipeline-hno (pyproject.toml)
     #   pytest-cov
-pytest-cov==4.1.0
+pytest-cov==5.0.0
     # via hapi-pipeline-hno (pyproject.toml)
 python-dateutil==2.8.2
     # via
@@ -213,7 +215,7 @@ tabulate==0.9.0
     # via frictionless
 text-unidecode==1.3
     # via python-slugify
-typer[all]==0.9.0
+typer[all]==0.10.0
     # via frictionless
 typing-extensions==4.10.0
     # via
@@ -230,7 +232,7 @@ urllib3==2.2.1
     # via
     #   libhxl
     #   requests
-validators==0.22.0
+validators==0.24.0
     # via frictionless
 virtualenv==20.25.1
     # via pre-commit
