--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ build-backend = "hatchling.build"
 [project]
 name = "hapi-pipeline-hno"
 description = "HAPI"
-authors = [{name = "Michael Rans", email = "rans@email.com"}]
-license = {text = "MIT"}
+authors = [{ name = "Michael Rans", email = "rans@email.com" }]
+license = { text = "MIT" }
 keywords = ["HDX", "HAPI"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -34,8 +34,9 @@ classifiers = [
 requires-python = ">=3.8"
 
 dependencies = [
-    "hdx-python-api>= 6.2.5",
+    "hdx-python-api>= 6.2.7",
     "hdx-python-country>= 3.7.0",
+    "pygithub",
 ]
 dynamic = ["version"]
 
@@ -96,6 +97,6 @@ dependencies = ["ruff"]
 
 [tool.hatch.envs.lint.scripts]
 style = [
-  "ruff check --config .config/ruff.toml --diff {args:.}",
-  "ruff format --config .config/ruff.toml --diff {args:.}",
+    "ruff check --config .config/ruff.toml --diff {args:.}",
+    "ruff format --config .config/ruff.toml --diff {args:.}",
 ]
