--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ attrs==23.2.0
 certifi==2024.2.2
     # via requests
 cffi==1.16.0
-    # via cryptography
+    # via
+    #   cryptography
+    #   pynacl
 cfgv==3.4.0
     # via pre-commit
 chardet==5.2.0
@@ -24,9 +26,13 @@ click==8.1.7
 coverage==7.4.4
     # via pytest-cov
 cryptography==42.0.5
-    # via pyopenssl
+    # via
+    #   pyjwt
+    #   pyopenssl
 defopt==6.4.0
     # via hdx-python-api
+deprecated==1.2.14
+    # via pygithub
 distlib==0.3.8
     # via virtualenv
 dnspython==2.6.1
@@ -35,17 +41,17 @@ docopt==0.6.2
     # via
     #   ckanapi
     #   num2words
-docutils==0.20.1
+docutils==0.21.1
     # via defopt
 email-validator==2.1.1
     # via hdx-python-api
 et-xmlfile==1.1.0
     # via openpyxl
-filelock==3.13.3
+filelock==3.13.4
     # via virtualenv
 frictionless==5.16.1
     # via hdx-python-utilities
-hdx-python-api==6.2.6
+hdx-python-api==6.2.7
 hdx-python-country==3.7.0
     # via hdx-python-api
 hdx-python-utilities==3.6.7
@@ -56,7 +62,7 @@ humanize==4.9.0
     # via frictionless
 identify==2.5.35
     # via pre-commit
-idna==3.6
+idna==3.7
     # via
     #   email-validator
     #   requests
@@ -125,12 +131,17 @@ pyasn1==0.6.0
     #   ndg-httpsclient
 pycparser==2.22
     # via cffi
-pydantic==2.6.4
+pydantic==2.7.0
     # via frictionless
-pydantic-core==2.16.3
+pydantic-core==2.18.1
     # via pydantic
+pygithub==2.3.0
 pygments==2.17.2
     # via rich
+pyjwt==2.8.0
+    # via pygithub
+pynacl==1.5.0
+    # via pygithub
 pyopenssl==24.1.0
     # via
     #   hdx-python-api
@@ -168,6 +179,7 @@ requests==2.31.0
     #   frictionless
     #   hdx-python-api
     #   libhxl
+    #   pygithub
     #   requests-file
 requests-file==2.0.0
     # via hdx-python-utilities
@@ -179,7 +191,7 @@ ruamel-yaml==0.18.6
     # via hdx-python-utilities
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
-setuptools==69.2.0
+setuptools==69.5.1
     # via
     #   ckanapi
     #   nodeenv
@@ -210,7 +222,7 @@ text-unidecode==1.3
     # via python-slugify
 typeguard==4.2.1
     # via inflect
-typer==0.12.2
+typer==0.12.3
     # via frictionless
 typing-extensions==4.11.0
     # via
@@ -218,6 +230,7 @@ typing-extensions==4.11.0
     #   inflect
     #   pydantic
     #   pydantic-core
+    #   pygithub
     #   typeguard
     #   typer
 unidecode==1.3.8
@@ -227,6 +240,7 @@ unidecode==1.3.8
 urllib3==2.2.1
     # via
     #   libhxl
+    #   pygithub
     #   requests
 validators==0.28.0
     # via frictionless
@@ -234,6 +248,8 @@ virtualenv==20.25.1
     # via pre-commit
 wheel==0.43.0
     # via libhxl
+wrapt==1.16.0
+    # via deprecated
 xlrd==2.0.1
     # via hdx-python-utilities
 xlrd3==1.1.0
