--- a/src/hdx/scraper/hno/project_configuration.yaml
+++ b/src/hdx/scraper/hno/project_configuration.yaml
@@ -5,6 +5,7 @@ hxltags_narrow:
   "Admin 2 PCode": "#adm2+code"
   "Sector": "#sector+code"
   "Gender": "#gender+code"
+  "Age Range": "#age+range"
   "Min Age": "#age+min"
   "Max Age": "#age+max"
   "Disabled": "#is_disabled"
@@ -135,7 +136,7 @@ category:
     "min_age": 18
     "max_age": 64
   "children":
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
   "elderly":
     "min_age": 65
@@ -194,35 +195,35 @@ category:
     "max_age": 64
   "children - female":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
   "girls":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
   "filles":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
   "niñas":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
   "children - male":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
   "boys":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
   "garcons":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
   "niños":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
   "elderly - female":
     "gender": "f"
@@ -272,12 +273,12 @@ category:
     "disabled": "y"
   "children - female - personas con discapacidad":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "disabled": "y"
   "children - male - personas con discapacidad":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "disabled": "y"
   "elderly - female - personas con discapacidad":
@@ -308,12 +309,12 @@ category:
     "group": "IDP"
   "children - female - idp":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "IDP"
   "children - male - idp":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "IDP"
   "elderly - female - idp":
@@ -340,22 +341,22 @@ category:
     "group": "IDP"
   "children - female - pdi":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "IDP"
   "children  - female - pdi":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "IDP"
   "children - male - pdi":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "IDP"
   "children  -  male - pdi":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "IDP"
   "elderly - female - pdi":
@@ -386,12 +387,12 @@ category:
     "group": "REF"
   "children - female - refugees":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "REF"
   "children - male - refugees":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "REF"
   "elderly - female - refugees":
@@ -422,12 +423,12 @@ category:
     "group": "RRI"
   "children - female - returnees":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "RRI"
   "children - male - returnees":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "RRI"
   "elderly - female - returnees":
@@ -454,17 +455,17 @@ category:
     "group": "RRI"
   "children - female - rapatries":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "RRI"
   "children - male - rapatries":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "RRI"
   "children - male -rapatries":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "RRI"
   "elderly - female - rapatries":
@@ -491,12 +492,12 @@ category:
     "group": "RRI"
   "children - female - retournes":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "RRI"
   "children - male - retournes":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "RRI"
   "elderly - female - retournes":
@@ -529,12 +530,12 @@ category:
     "group": "HST"
   "children - female - host communities":
     "gender": "f"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "HST"
   "children - male - host communities":
     "gender": "m"
-    "min_age": ~
+    "min_age": 0
     "max_age": 17
     "group": "HST"
   "elderly - female - host communities":
