--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ attrs==23.2.0
     #   jsonlines
     #   jsonschema
     #   referencing
-certifi==2024.2.2
+certifi==2024.6.2
     # via requests
 cffi==1.16.0
     # via cryptography
@@ -22,9 +22,9 @@ ckanapi==4.8
     # via hdx-python-api
 click==8.1.7
     # via typer
-coverage==7.5.2
+coverage==7.5.3
     # via pytest-cov
-cryptography==42.0.7
+cryptography==42.0.8
     # via pyopenssl
 defopt==6.4.0
     # via hdx-python-api
@@ -101,11 +101,11 @@ more-itertools==10.2.0
     # via inflect
 ndg-httpsclient==0.5.1
     # via hdx-python-api
-nodeenv==1.8.0
+nodeenv==1.9.1
     # via pre-commit
 num2words==0.5.13
     # via quantulum3
-openpyxl==3.1.2
+openpyxl==3.1.3
     # via hdx-python-utilities
 packaging==24.0
     # via pytest
@@ -128,9 +128,9 @@ pyasn1==0.6.0
     #   ndg-httpsclient
 pycparser==2.22
     # via cffi
-pydantic==2.7.1
+pydantic==2.7.3
     # via frictionless
-pydantic-core==2.18.2
+pydantic-core==2.18.4
     # via pydantic
 pygments==2.18.0
     # via rich
@@ -140,7 +140,7 @@ pyopenssl==24.1.0
     #   ndg-httpsclient
 pyphonetics==0.5.3
     # via hdx-python-country
-pytest==8.2.1
+pytest==8.2.2
     # via pytest-cov
 pytest-cov==5.0.0
 python-dateutil==2.8.2
@@ -167,7 +167,7 @@ referencing==0.35.1
     # via
     #   jsonschema
     #   jsonschema-specifications
-requests==2.32.2
+requests==2.32.3
     # via
     #   ckanapi
     #   frictionless
@@ -189,9 +189,7 @@ ruamel-yaml==0.18.6
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
 setuptools==70.0.0
-    # via
-    #   ckanapi
-    #   nodeenv
+    # via ckanapi
 shellingham==1.5.4
     # via typer
 simpleeval==0.9.13
@@ -221,7 +219,7 @@ typeguard==4.3.0
     # via inflect
 typer==0.12.3
     # via frictionless
-typing-extensions==4.12.0
+typing-extensions==4.12.1
     # via
     #   frictionless
     #   inflect
