--- a/.github/workflows/run_script.yaml
+++ b/.github/workflows/run_script.yaml
@@ -19,6 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install .
     - name: Run script
       env:
         HDX_SITE: ${{ secrets.HDX_SITE }}
