--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ requires-python = ">=3.8"
 dependencies = [
     "hdx-python-api>= 6.2.8",
     "hdx-python-country>= 3.7.2",
+    "hdx-python-country>= 3.6.9",
 ]
 dynamic = ["version"]
 
