--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,9 @@ classifiers = [
 requires-python = ">=3.8"
 
 dependencies = [
-    "hdx-python-api>= 6.2.9",
+    "hdx-python-api>= 6.3.1",
     "hdx-python-country>= 3.7.2",
-    "hdx-python-country>= 3.6.9",
+    "hdx-python-utilities>= 3.6.9",
 ]
 dynamic = ["version"]
 
