--- a/requirements.txt
+++ b/requirements.txt
@@ -46,11 +46,15 @@ filelock==3.14.0
     # via virtualenv
 frictionless==5.17.0
     # via hdx-python-utilities
-hdx-python-api==6.2.9
+hdx-python-api==6.3.1
+    # via hdx-scraper-hno (pyproject.toml)
 hdx-python-country==3.7.2
-    # via hdx-python-api
+    # via
+    #   hdx-scraper-hno (pyproject.toml)
+    #   hdx-python-api
 hdx-python-utilities==3.6.9
     # via
+    #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
     #   hdx-python-country
 humanize==4.9.0
@@ -61,7 +65,7 @@ idna==3.7
     # via
     #   email-validator
     #   requests
-ijson==3.2.3
+ijson==3.3.0
     # via hdx-python-utilities
 inflect==7.2.1
     # via quantulum3
@@ -122,6 +126,7 @@ ply==3.11
 pockets==0.9.1
     # via sphinxcontrib-napoleon
 pre-commit==3.7.1
+    # via hdx-scraper-hno (pyproject.toml)
 pyasn1==0.6.0
     # via
     #   hdx-python-api
@@ -141,8 +146,11 @@ pyopenssl==24.1.0
 pyphonetics==0.5.3
     # via hdx-python-country
 pytest==8.2.2
-    # via pytest-cov
+    # via
+    #   hdx-scraper-hno (pyproject.toml)
+    #   pytest-cov
 pytest-cov==5.0.0
+    # via hdx-scraper-hno (pyproject.toml)
 python-dateutil==2.8.2
     # via
     #   frictionless
