Prefer caseload figures to disaggregated where there are both Set resource modified to published date Update pre commit config

--- a/src/hdx/scraper/hno/hdx_dataset_static.yaml
+++ b/src/hdx/scraper/hno/hdx_dataset_static.yaml
@@ -1,6 +1,6 @@
 notes: "This dataset contains standardised Humanitarian Needs Overview data taken from the OCHA HPC system."
 license_id: "cc-by-igo"
 methodology: "Registry"
-dataset_source: "OCHA HPC"
+dataset_source: "OCHA HPC.Tools"
 caveats: ""
 private: False  # has to be True or False
