Don't need to call __main__

--- a/.github/workflows/run_script.yaml
+++ b/.github/workflows/run_script.yaml
@@ -28,7 +28,7 @@ jobs:
         USER_AGENT: ${{ secrets.USER_AGENT }}
         EXTRA_PARAMS: ${{ secrets.EXTRA_PARAMS }}
       run: |
-        python -m hdx.scraper.hno.__main__
+        python -m hdx.scraper.hno
     - name: Send mail
       if: failure()
       uses: dawidd6/action-send-mail@v3
