--- a/requirements.txt
+++ b/requirements.txt
@@ -46,13 +46,13 @@ filelock==3.15.4
     # via virtualenv
 frictionless==5.17.0
     # via hdx-python-utilities
-hdx-python-api==6.3.1
+hdx-python-api==6.3.2
     # via hdx-scraper-hno (pyproject.toml)
 hdx-python-country==3.7.7
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
-hdx-python-utilities==3.7.2
+hdx-python-utilities==3.7.3
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
@@ -125,7 +125,7 @@ ply==3.11
     #   libhxl
 pockets==0.9.1
     # via sphinxcontrib-napoleon
-pre-commit==3.7.1
+pre-commit==3.8.0
     # via hdx-scraper-hno (pyproject.toml)
 pyasn1==0.6.0
     # via
@@ -145,7 +145,7 @@ pyopenssl==24.2.1
     #   ndg-httpsclient
 pyphonetics==0.5.3
     # via hdx-python-country
-pytest==8.3.1
+pytest==8.3.2
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   pytest-cov
@@ -188,7 +188,7 @@ rfc3986==2.0.0
     # via frictionless
 rich==13.7.1
     # via typer
-rpds-py==0.19.0
+rpds-py==0.19.1
     # via
     #   jsonschema
     #   referencing
@@ -196,7 +196,7 @@ ruamel-yaml==0.18.6
     # via hdx-python-utilities
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
-setuptools==71.1.0
+setuptools==72.1.0
     # via ckanapi
 shellingham==1.5.4
     # via typer
@@ -252,6 +252,8 @@ xlrd==2.0.1
     # via hdx-python-utilities
 xlrd3==1.1.0
     # via libhxl
+xlsx2csv==0.8.3
+    # via hdx-python-utilities
 xlsxwriter==3.2.0
     # via tableschema-to-template
 xlwt==1.3.0
