Add subnational data to global dataset

--- a/src/hdx/scraper/hno/project_configuration.yaml
+++ b/src/hdx/scraper/hno/project_configuration.yaml
@@ -1,23 +1,9 @@
 hpc_url: "https://api.hpc.tools/v2/"
 
-country_hxltags_narrow:
-  "Admin 1 PCode": "#adm1+code"
-  "Admin 2 PCode": "#adm2+code"
-  "Sector": "#sector+code"
-  "Gender": "#gender+code"
-  "Age Range": "#age+range"
-  "Min Age": "#age+min"
-  "Max Age": "#age+max"
-  "Disabled": "#is_disabled"
-  "Population Group": "#population_group+code"
-  "Population": "#population"
-  "In Need": "#inneed"
-  "Targeted": "#targeted"
-  "Affected": "#affected"
-  "Reached": "#reached"
-
-global_hxltags_narrow:
+hxltags:
   "Country ISO3": "#country+code"
+  "Admin 1 PCode": "#adm1+code"
+  "Admin 2 PCode": "#adm2+code"
   "Sector": "#sector+code"
   "Gender": "#gender+code"
   "Age Range": "#age+range"
@@ -30,44 +16,6 @@ global_hxltags_narrow:
   "Targeted": "#targeted"
   "Affected": "#affected"
   "Reached": "#reached"
-
-hxltags_wide:
-  "Admin 1 PCode": "#adm1+code"
-  "Admin 2 PCode": "#adm2+code"
-  "Sector": "#sector+code"
-  "Population": "#population"
-  "Population Male": "#population+m"
-  "Population Female": "#population+f"
-  "Population Adult": "#population+age18_64"
-  "Population Children": "#population+age0_17"
-  "Population Elderly": "#population+age65plus"
-  "Population Disabled": "#population+disability"
-  "Population Residents": "#population+residents"
-  "Population Refugees": "#population+refugees"
-  "Population IDPs": "#population+idps"
-  "Population Returnees": "#population+returnees"
-  "In Need": "#inneed"
-  "In Need Male": "#inneed+m"
-  "In Need Female": "#inneed+f"
-  "In Need Adult": "#inneed+age18_64"
-  "In Need Children": "#inneed+age0_17"
-  "In Need Elderly": "#inneed+age65plus"
-  "In Need Disabled": "#inneed+disability"
-  "In Need Residents": "#inneed+residents"
-  "In Need Refugees": "#inneed+refugees"
-  "In Need IDPs": "#inneed+idps"
-  "In Need Returnees": "#inneed+returnees"
-  "Targeted": "#targeted"
-  "Targeted Male": "#targeted+m"
-  "Targeted Female": "#targeted+f"
-  "Targeted Adult": "#targeted+age18_64"
-  "Targeted Children": "#targeted+age0_17"
-  "Targeted Elderly": "#targeted+age65plus"
-  "Targeted Disabled": "#targeted+disability"
-  "Targeted Residents": "#targeted+residents"
-  "Targeted Refugees": "#targeted+refugees"
-  "Targeted IDPs": "#targeted+idps"
-  "Targeted Returnees": "#targeted+returnees"
 
 population_status:
   "totalPopulation":
