--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ attrs==24.2.0
     #   jsonlines
     #   jsonschema
     #   referencing
-certifi==2024.7.4
+certifi==2024.8.30
     # via requests
-cffi==1.17.0
+cffi==1.17.1
     # via cryptography
 cfgv==3.4.0
     # via pre-commit
@@ -24,7 +24,7 @@ click==8.1.7
     # via typer
 coverage==7.6.1
     # via pytest-cov
-cryptography==43.0.0
+cryptography==43.0.1
     # via pyopenssl
 defopt==6.4.0
     # via hdx-python-api
@@ -44,11 +44,11 @@ et-xmlfile==1.1.0
     # via openpyxl
 filelock==3.15.4
     # via virtualenv
-frictionless==5.17.0
+frictionless==5.17.1
     # via hdx-python-utilities
-hdx-python-api==6.3.2
+hdx-python-api==6.3.3
     # via hdx-scraper-hno (pyproject.toml)
-hdx-python-country==3.7.7
+hdx-python-country==3.7.8
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-api
@@ -61,7 +61,7 @@ humanize==4.10.0
     # via frictionless
 identify==2.6.0
     # via pre-commit
-idna==3.7
+idna==3.8
     # via
     #   email-validator
     #   requests
@@ -101,7 +101,7 @@ markupsafe==2.1.5
     # via jinja2
 mdurl==0.1.2
     # via markdown-it-py
-more-itertools==10.4.0
+more-itertools==10.5.0
     # via inflect
 ndg-httpsclient==0.5.1
     # via hdx-python-api
@@ -133,9 +133,9 @@ pyasn1==0.6.0
     #   ndg-httpsclient
 pycparser==2.22
     # via cffi
-pydantic==2.8.2
+pydantic==2.9.0
     # via frictionless
-pydantic-core==2.20.1
+pydantic-core==2.23.2
     # via pydantic
 pygments==2.18.0
     # via rich
@@ -186,7 +186,7 @@ requests-file==2.1.0
     # via hdx-python-utilities
 rfc3986==2.0.0
     # via frictionless
-rich==13.7.1
+rich==13.8.0
     # via typer
 rpds-py==0.20.0
     # via
@@ -196,7 +196,7 @@ ruamel-yaml==0.18.6
     # via hdx-python-utilities
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
-setuptools==73.0.1
+setuptools==74.1.2
     # via ckanapi
 shellingham==1.5.4
     # via typer
@@ -225,7 +225,7 @@ text-unidecode==1.3
     # via python-slugify
 typeguard==4.3.0
     # via inflect
-typer==0.12.4
+typer==0.12.5
     # via frictionless
 typing-extensions==4.12.2
     # via
@@ -234,6 +234,8 @@ typing-extensions==4.12.2
     #   pydantic-core
     #   typeguard
     #   typer
+tzdata==2024.1
+    # via pydantic
 unidecode==1.3.8
     # via
     #   libhxl
@@ -242,7 +244,7 @@ urllib3==2.2.2
     # via
     #   libhxl
     #   requests
-validators==0.33.0
+validators==0.34.0
     # via frictionless
 virtualenv==20.26.3
     # via pre-commit
