--- a/src/hdx/scraper/hno/config/project_configuration.yaml
+++ b/src/hdx/scraper/hno/config/project_configuration.yaml
@@ -1,4 +1,7 @@
 hpc_url: "https://api.hpc.tools/v2/"
+
+resource_description: "This resource contains standardised Humanitarian Needs Overview data taken from the OCHA HPC Tools system which is under active development. For more detailed but less standardized data on humanitarian needs, see the resources below."
+
 hxltags:
   "Country ISO3": "#country+code"
   "Admin 1 PCode": "#adm1+code"
